PPC64 (part 212): Several memory ordering fixes in C-code.

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • port-stage-ppc-aix
    • Affects Version/s: port-stage-ppc-aix
    • Component/s: hotspot
    • None
    • gc
    • master
    • ppc

        This fixes several issues in GC and other runtime code showing on PPC64.

         - Accessing arrays in CMS (compactibleFreeListSpace.cpp)
         - CMS: Do release when marking a card dirty. The release must only be done if GC is running. (several files)
         - method counter initialization (method.hpp).
         - Order accessing f1/f2 in constant pool cache.
         - Release stores in OopMapCache constructor (instanceKlass.cpp).
         - BiasedLocking: Release setting object header to displaced mark.
         - Release state of nmethod sweeper (sweeper.cpp).
         - Do barriers when writing the thread state (thread.hpp).

        ---------------------------------

        This is preparation for PPC64 integration: http://openjdk.java.net/jeps/175
        This and following ppc64 changes will go into staging repository first and tested there: http://hg.openjdk.java.net/ppc-aix-port/stage/

        http://hg.openjdk.java.net/ppc-aix-port/jdk8/hotspot/file/09f97b967480/ppc_patches/0212_rt-gc_memory_ordering.patch

              Assignee:
              Goetz Lindenmaier
              Reporter:
              Goetz Lindenmaier
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: