8029396: PPC64 (part 212): Several memory ordering fixes in C-code

Memory ordering fixes in GC and other runtime code showing on PPC64.

Reviewed-by: kvn, coleenp